--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>springboot-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-demo</name>
+	<packaging>pom</packaging>
 
 	<modules>
 		<module>springboot-log4j2</module>
