--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,6 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
-				<!-- 去掉springboot默认配置 -->
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-logging</artifactId>
-					</exclusion>
-				</exclusions>
 				<version>2.1.3.RELEASE</version>
 			</dependency>
 
@@ -59,24 +52,18 @@
 				<version>3.1.2</version>
 			</dependency>
 
-			<!-- log4j2 -->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-log4j2</artifactId>
-				<version>2.1.1.RELEASE</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.lmax</groupId>
-				<artifactId>disruptor</artifactId>
-				<version>3.4.2</version>
-			</dependency>
-
 			<!-- spring security -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-security</artifactId>
 				<version>1.4.1.RELEASE</version>
+			</dependency>
+
+			<!-- thymeleaf -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-thymeleaf</artifactId>
+				<version>2.1.3.RELEASE</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
