--- a/springboot-security/src/main/resources/application.properties
+++ b/springboot-security/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF8&serverTimezone=UTC&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=123456
