--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<modules>
 		<module>springboot-security</module>
+		<module>springboot-quartz</module>
 	</modules>
 
 	<properties>
@@ -64,6 +65,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-thymeleaf</artifactId>
 				<version>2.1.3.RELEASE</version>
+			</dependency>
+
+			<!-- quartz -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-quartz</artifactId>
+				<version>2.1.1.RELEASE</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
