--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>springboot-security</module>
 		<module>springboot-quartz</module>
+		<module>springboot-swagger2</module>
 	</modules>
 
 	<properties>
@@ -72,6 +73,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-quartz</artifactId>
 				<version>2.1.1.RELEASE</version>
+			</dependency>
+
+			<!--swagger2-->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>2.8.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>2.8.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
