finish springboot-postgresql

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,8 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>42.2.5</version>
-                <scope>runtime</scope>
+                <!--<scope>runtime</scope>-->
+                <scope>compile</scope>
             </dependency>
 
             <!-- mybatis -->
