--- a/springboot-postgresql/src/main/resources/application.properties
+++ b/springboot-postgresql/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8081
+#≈‰÷√ ˝æ›‘¥
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/traindb?currentSchema=data
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driverClassName=org.postgresql.Driver
+mybatis.configuration.mapUnderscoreToCamelCase=true
