--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
         <module>springboot-security</module>
         <module>springboot-quartz</module>
         <module>springboot-swagger2</module>
-        <module>springboot-shutdownnow</module>
         <module>springboot-postgresql</module>
     </modules>
 
@@ -104,6 +103,13 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>1.3.2</version>
+            </dependency>
+
+            <!--Rocket MQ-->
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>4.3.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
